Fix body alignment on mobile

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -39,6 +39,8 @@ body {
   line-height: 1.7rem;
 
   background-color: var(--background-color);
+  margin: 0 auto;
+  padding: 2rem;
   width: $container-width;
   max-width: $container-max-width;
 }
@@ -80,7 +82,6 @@ a {
 }
 
 .container {
-  margin: 0 auto;
   padding-top: 4rem;
 
 }
